--- a/app/views/workallocation/pages/wa-pj-ra.html
+++ b/app/views/workallocation/pages/wa-pj-ra.html
@@ -97,12 +97,12 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 250px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Role</th>
           <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">Location</th>
               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">End</th>
               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
@@ -113,8 +113,8 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
           <!--          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }} </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("add", 150, "day") | date( "D MMMM YYYY" ) }}</td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
@@ -127,12 +127,12 @@ Case details
         <table class="govuk-table ">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 300px;">Name</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;">Role</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19"  style="width: 250px;">Name</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;">Role</th>
           <!--        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " >Access type</th> -->
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Location</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">Location</th>
               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">Start</th>
-              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: auto;">End</th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 200px;">End</th>
               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 100px;"></th>
             </tr>
         </thead>
@@ -145,7 +145,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
         <!--            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }} </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
 
