--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -42,7 +42,7 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-l">My work filter</h2>
         <div class="xui-alert-link__number">2 </div>
         <div class="govuk-!-padding-bottom-6"></div>
-          <p><a target="_blank" href="/workallocation/pages/wa-mytasks-wf?usertype=judiciary&">Filter open</a><br>Checked with DS - v3.3</p>
+          <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wf?usertype=judiciary&">Filter open</a><br>- v3.3</p>
         <div class="govuk-!-padding-bottom-9"></div>
         <!-- SECTION BREAK -->
 
@@ -274,7 +274,7 @@ GOV.UK Prototype Kit
     <h2 class="govuk-heading-l">My work filter</h2>
     <div class="xui-alert-link__number">2 </div>
     <div class="govuk-!-padding-bottom-6"></div>
-      <p><a target="_blank" href="/workallocation/pages/wa-mytasks-wf?usertype=staff&">Filter open</a><br>Checked with DS - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-wf?usertype=staff&">Filter open</a><br>- v3.3</p>
     <div class="govuk-!-padding-bottom-9"></div>
     <!-- SECTION BREAK -->
 
