--- a/app/views/workallocation/pages/wa-mytasks.html
+++ b/app/views/workallocation/pages/wa-mytasks.html
@@ -21,7 +21,7 @@ My work
 {{ govukButton({
   text: "Show work filter",
   classes: "govuk-button--secondary",
-  href: "wa-mytasks-wf"
+  href: "#"
 }) }}
 
 
