--- a/app/views/workallocation/pages/wa-available-tasks-wfb.html
+++ b/app/views/workallocation/pages/wa-available-tasks-wfb.html
@@ -13,12 +13,12 @@ My work
   </div>
 </div>
 <p>Access tasks and cases.</p>
-{{ govukButton({
+<div>{{ govukButton({
   text: "Hide work filter",
   classes: "govuk-button--secondary",
   href: "wa-available-tasks"
 }) }}
-
+<span class="hmcts-badge hmcts-badge--black" style="  margin: 0; position: relative; top: 9px; left: 10px;">Filtered view</span><span class="govuk-hint" style="  margin: 0; position: relative; top: 9px; left: 20px; display: inline;"> All of your work may not be visible.<span></div>
 
 
 
@@ -43,7 +43,7 @@ My work
     <div class="govuk-grid-column-one-quarter" style="background-color: 	#f3f2f1; margin-left: 15px;">
       <div class="govuk-checkboxes govuk-checkboxes--small">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" >
+          <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" checked>
           <label class="govuk-label govuk-checkboxes__label" for="organisation">
             Birmingham
           </label>
@@ -90,7 +90,7 @@ My work
           </label>
         </div>
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="TH" checked>
+          <input class="govuk-checkboxes__input" id="organisation-4" name="organisation" type="checkbox" value="TH" >
           <label class="govuk-label govuk-checkboxes__label" for="organisation-4">
             Taylor House
           </label>
@@ -151,7 +151,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>5</strong> of <strong>5</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> tasks</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -165,27 +165,30 @@ My work
         </tr>
       </thead>
       <tbody class="govuk-table__body">
+
         <tr class="govuk-table__row">
 
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leticia Callahan</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Review appellant case</td>
           <td class="govuk-table__cell">{{govukTag({
-          text: now | date( 'subtract', 2, 'days' ) | date,
+          text: now | date( 'subtract', 6, 'days' ) | date,
           classes: "govuk-tag--red"
         })}} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
+
+
         <tr class="govuk-table__row">
 
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Olivia-Rose Olsen</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Julien Nicholson</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'add', 0, 'days' ) | date,
           classes: "govuk-tag--yellow"
@@ -193,34 +196,16 @@ My work
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
+
         <tr class="govuk-table__row">
 
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">John Pickering</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-              style="fill: black">
-              <title>This case has more than one task. Review needed.</title>
-              <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                    C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-            </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
-          <td class="govuk-table__cell">{{govukTag({
-          text: now | date( 'add', 0, 'days' ) | date,
-          classes: "govuk-tag--yellow"
-        })}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
-        <tr class="govuk-table__row">
-
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Neha Venkatanarasimharaj</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Norman Needham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
           <td class="govuk-table__cell">{{govukTag({
-          text: now | date( 'add', 6, 'days' ) | date,
+          text: now | date( 'add', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
@@ -228,23 +213,19 @@ My work
         </tr>
         <tr class="govuk-table__row">
 
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hudson Remi</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-              style="fill: black">
-              <title>This case has more than one task. Review needed.</title>
-              <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                    C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-            </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review application decision</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lamar Guerrero</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
           <td class="govuk-table__cell">{{govukTag({
-          text: now | date( 'add', 8, 'days' ) | date,
+          text: now | date( 'add', 3, 'days' ) | date,
           classes: "govuk-tag--grey"
-        })}}  </td>
+        })}} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
+
 
 
       </tbody>
