--- a/app/views/workallocation/pages/wa-available-tasks-wfbt.html
+++ b/app/views/workallocation/pages/wa-available-tasks-wfbt.html
@@ -13,11 +13,13 @@ My work
   </div>
 </div>
 <p>Access tasks and cases.</p>
-{{ govukButton({
+<div>{{ govukButton({
   text: "Hide work filter",
   classes: "govuk-button--secondary",
   href: "wa-available-tasks"
 }) }}
+
+<span class="hmcts-badge hmcts-badge--black" style="  margin: 0; position: relative; top: 9px; left: 10px;">Filtered view</span><span class="govuk-hint" style="  margin: 0; position: relative; top: 9px; left: 20px; display: inline;"> All of your work may not be visible.<span></div>
 
 
 
@@ -43,7 +45,7 @@ My work
     <div class="govuk-grid-column-one-quarter" style="background-color: 	#f3f2f1; margin-left: 15px;">
       <div class="govuk-checkboxes govuk-checkboxes--small">
         <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" >
+          <input class="govuk-checkboxes__input" id="organisation" name="organisation" type="checkbox" value="hmrc" checked>
           <label class="govuk-label govuk-checkboxes__label" for="organisation">
             Birmingham
           </label>
@@ -111,7 +113,7 @@ My work
 
 {{ govukButton({
   text: "Apply",
-  href: "wa-available-tasks-wfbt",
+  href: "wa-available-tasks-wfb",
   classes: "govuk-!-margin-right-3"
 }) }}
 {{ govukButton({
@@ -151,7 +153,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>5</strong> of <strong>5</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>9</strong> of <strong>9</strong> tasks</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -165,6 +167,24 @@ My work
         </tr>
       </thead>
       <tbody class="govuk-table__body">
+
+        <tr class="govuk-table__row">
+
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leticia Callahan</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Review appellant case</td>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'subtract', 6, 'days' ) | date,
+          classes: "govuk-tag--red"
+        })}} </td>
+          <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+
+
+
         <tr class="govuk-table__row">
 
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
@@ -178,6 +198,20 @@ My work
         })}} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+        <tr class="govuk-table__row">
+
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Julien Nicholson</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">EEA</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'add', 0, 'days' ) | date,
+          classes: "govuk-tag--yellow"
+        })}} </td>
+          <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
 
@@ -208,6 +242,34 @@ My work
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'add', 0, 'days' ) | date,
           classes: "govuk-tag--yellow"
+        })}} </td>
+          <!--  <td class="govuk-table__cell">N/A</td> -->
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+        <tr class="govuk-table__row">
+
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Norman Needham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'add', 2, 'days' ) | date,
+          classes: "govuk-tag--grey"
+        })}} </td>
+          <!--  <td class="govuk-table__cell">N/A</td> -->
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+        <tr class="govuk-table__row">
+
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lamar Guerrero</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">	Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Birmingham</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'add', 3, 'days' ) | date,
+          classes: "govuk-tag--grey"
         })}} </td>
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
