--- a/app/views/workallocation/pages/wa-PA-00467-2017-arex.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arex.html
@@ -122,7 +122,7 @@ Case details
         <!--          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }} </td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("add", 150, "day") | date( "D MMMM YYYY" ) }}</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><!--{{ now |  date("add", 150, "day") | date( "D MMMM YYYY" ) }} --></td>
               <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
           </tr>
 
