--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj-re.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj-re.html
@@ -121,7 +121,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
             <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }} </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
@@ -131,7 +131,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
           <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}  </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
@@ -162,7 +162,7 @@ Case details
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
             <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">{{ now |  date("subtract", 50, "day") | date( "D MMMM YYYY" ) }}  </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
 
