--- a/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-noj.html
@@ -40,17 +40,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-t">
+        <a class="govuk-tabs__tab" href="#">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="#">
           Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
+        <a class="govuk-tabs__tab" href="#">
           Overview
         </a>
       </li>
