--- a/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-coi-2.html
@@ -30,7 +30,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="#">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Leagal ops
+              Legal ops
             </label>
           </div>
           <div class="govuk-radios__item">
