--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (10/05/21) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (11/05/21) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -70,7 +70,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=judiciary&">Roles and access - Allocate a hearing judge</a><br> - v3.2</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=judiciary&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.2</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=judiciary&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.2</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.2 (DAVID CHECKING LABELS 28/04)</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.2 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjc?usertype=judiciary&">Roles and access - Allocate a judicial role - Hearing judge - confirmation</a><br> - v3.2</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-none?usertype=judiciary&">Roles and access - no active tasks for case</a> - v3.2</p>
 <br>
@@ -82,7 +82,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=judiciary&">Roles and access - Allocate a judicial role - choose</a><br> - v3.2</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=judiciary&">Roles and access - Allocate a judicial role - find</a><br> - v3.2</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=judiciary&">Roles and access - Allocate a judicial role - duration</a><br> - v3.2</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.2 (DAVID CHECKING LABELS 28/04)</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=judiciary&">Roles and access - Allocate a judicial role - check details</a><br> - v3.2 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=judiciary&">Roles and access - Allocate a judicial role - complete</a><br> - v3.2</p>
 
 <hr class="govuk-section-break govuk-section-break--visible">
@@ -97,7 +97,7 @@ GOV.UK Prototype Kit
         <p class="govuk-!-padding-bottom-2"></p>
 
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=judiciary&">Roles and access - Remove allocation</a><br> - v3.2 </p>
-        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=judiciary&">Roles and access - Remove allocation</a><br> - v3.2 (NEW DESIGN PENDING FROM DAVID  28/04)</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=judiciary&">Roles and access - Remove allocation</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra-de?usertype=judiciary&">Roles and access - Removed allocation - complete</a><br> - v3.2 </p>
 
         <!-- SECTION BREAK -->
@@ -302,7 +302,7 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hj?usertype=staff&">Roles and access - Allocate a hearing judge</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjha?usertype=staff&">Roles and access - Allocate a hearing judge - Find the judge</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjdur?usertype=staff&">Roles and access - Allocate a hearing judge - Duration of role</a><br> - v3.2</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.2 (DAVID CHECKING LABELS 28/04)</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchk?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - Check details</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjc?usertype=staff&">Roles and access - Allocate a judicial role - Hearing judge - confirmation</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-none?usertype=staff&">Roles and access - no active tasks for case</a> - v3.2</p>
     <br>
@@ -314,7 +314,7 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhn?usertype=staff&">Roles and access - Allocate a judicial role - choose</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajhan?usertype=staff&">Roles and access - Allocate a judicial role - find</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ajndur?usertype=staff&">Roles and access - Allocate a judicial role - duration</a><br> - v3.2</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.2 (DAVID CHECKING LABELS 28/04)</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-hjchkn?usertype=staff&">Roles and access - Allocate a judicial role - check details</a><br> - v3.2</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-loj?usertype=staff&">Roles and access - Allocate a judicial role - complete</a><br> - v3.2</p>
 
     <hr class="govuk-section-break govuk-section-break--visible">
@@ -329,7 +329,7 @@ GOV.UK Prototype Kit
     <p class="govuk-!-padding-bottom-2"></p>
 
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjp-o?usertype=staff&">Roles and access - Remove allocation</a><br> - v3.2 </p>
-    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=staff&">Roles and access - Remove allocation</a><br> - v3.2 (NEW DESIGN PENDING FROM DAVID  28/04)</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra?usertype=staff&">Roles and access - Remove allocation</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arjra-de?usertype=staff&">Roles and access - Removed allocation - complete</a><br> - v3.2 </p>
 
     <!-- SECTION BREAK -->
