--- a/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arjra.html
@@ -18,30 +18,40 @@ Case details
       Role summary
     </label>
   </h3>
+
+  <dl class="govuk-summary-list govuk-!-margin-bottom-9 govuk-!-width-three-quarters">
+
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Person
+      </dt>
+      <dd class="govuk-summary-list__value">
+        <p class="govuk-body">Judge Goodwin</p>
+        <p class="govuk-body">judge.goodwin@example.com</p>
+      </dd>
+      <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="wa-PA-00467-2017-ajhan">
+          Change<span class="govuk-visually-hidden"> contact details</span>
+        </a>
+      </dd>
+    </div>
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Role
+      </dt>
+      <dd class="govuk-summary-list__value">
+        <p class="govuk-body">Hearing judge</p>
+
+      </dd>
+      <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="wa-PA-00467-2017-ajndur">
+          Change<span class="govuk-visually-hidden"> contact details</span>
+        </a>
+      </dd>
+    </div>
+  </dl>
 </div>
-<table class="govuk-table govuk-!-width-three-quarters">
-<thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Name</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Location</th>
 
-
-    </tr>
-</thead>
-
-<tbody class="govuk-table__body">
-
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Silverman</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing judge</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-
-    </tr>
-</tbody>
-</table>
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Remove allocation",
