--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -48,7 +48,7 @@
 
     <header class="hmcts-header" role="banner">
 
-        <div style="max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; ">
+        <div style="max-width:1740px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; justify-content: center;">
 
             <div style="width: 406px; ">
                 <a style="color: white; font-size: 24px; font-weight: bold; text-decoration: none;" href="#">Manage Cases</a>
@@ -82,69 +82,69 @@
         </div>
 
 
-    </header>
+        <div  style="background-color: #0b0c0c;" >
+            <div style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; background-color: #0b0c0c;">
 
-  {% set searchHtml %}
-    <a class="hmcts-search-toggle__button" href="#">Find case</a>
-  {% endset %}
-
-
-    <div  style="background-color: #0b0c0c;" >
-        <div style=" max-width:1840px;  min-width:960px;   margin: 0px 40px 0px 40px; display: flex; background-color: #0b0c0c;">
-
-            <div style="width: 0px; ">
-
-            </div>
-
-            <div>
-                <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 500px;">
-                    <ul class="hmcts-primary-navigation__list">
-                        <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
-                                My work
-                            </a>
-                        </li>
-                        <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="#">
-                                All work
-                            </a>
-                        </li>
-                        <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
-                                Search cases
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-
-
-            <div style="display: flex; flex-grow: 1;">
-            </div>
-
-
-            <form
-                name="aspnetForm"
-                method="post"
-                id="aspnetForm"
-                autocomplete="off"
-                action="/opencase"
-                >
-
-                <div style="display: flex;flex-direction: row; ">
-                    <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case reference:  &nbsp;</p>
-                    <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
-                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
-                        Find
-                    </button>
+                <div style="width: 0px; ">
 
                 </div>
-            </form>
 
+                <div>
+                    <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 500px;">
+                        <ul class="hmcts-primary-navigation__list">
+                            <li class="hmcts-primary-navigation__item">
+                                <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
+                                    My work
+                                </a>
+                            </li>
+                            <li class="hmcts-primary-navigation__item">
+                                <a class="hmcts-primary-navigation__link" href="#">
+                                    All work
+                                </a>
+                            </li>
+                            <li class="hmcts-primary-navigation__item">
+                                <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
+                                    Search cases
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+
+                <div style="display: flex; flex-grow: 1;">
+                </div>
+
+
+                <form
+                        name="aspnetForm"
+                        method="post"
+                        id="aspnetForm"
+                        autocomplete="off"
+                        action="/opencase"
+                >
+
+                    <div style="display: flex;flex-direction: row; ">
+                        <p style="color: white; margin-top:8px; margin-bottom: 0px; ">16-digit case reference:  &nbsp;</p>
+                        <input class="govuk-input" id="hmctsrefheader" name="hmctsrefheader" type="text" spellcheck="false" style="width:219px;">
+                        <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="height:36px; margin-left: 4px; margin-top: 2px;  margin-bottom: 0px;">
+                            Find
+                        </button>
+
+                    </div>
+                </form>
+
+
+            </div>
 
         </div>
 
-    </div>
+
+    </header>
+
+
+
+
 
 
 
@@ -170,7 +170,7 @@
 
 
     {% block main %}
-        <div style=" max-width:1840px;  min-width:1220px;   margin: 0px 40px 0px 40px;">
+        <div style=" max-width:1840px;  min-width:960px;  margin: 0px 40px 0px 40px;">
             {% block beforeContent %}{% endblock %}
             <main class="govuk-main-wrapper {{ mainClasses }}" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %} style="padding-top: 25px;">
                 {% block content %}{% endblock %}
